# ComfyUI-SegviGen

./: .gitignore  README.md  __init__.py  comfy-env.toml  install.py  pyproject.toml  requirements.txt
.serena/: project.yml
core/: __init__.py  asset_encode.py  checkpoints.py  contracts.py  decode.py  encode.py  interactive.py  pipeline.py  preview_cache.py  renderer.py  sampler.py  split.py  trellis2_shim.py  voxel.py
docs/superpowers/plans/: 2026-03-26-interactive-segmentation.md  2026-04-02-upstream-faithful-development-roadmap.md
docs/superpowers/specs/: 2026-03-26-interactive-segmentation-design.md
nodes/: __init__.py  comfy-env.toml  helpers.py  nodes_asset.py  nodes_conditioning.py  nodes_guided.py  nodes_loadmesh.py  nodes_output.py  nodes_picker.py  nodes_points.py  nodes_preprocess.py  nodes_sampler.py  nodes_voxel.py
tests/: __init__.py  conftest.py  test_asset_encode.py  test_checkpoints.py  test_contracts.py  test_decode.py  test_encode.py  test_gpu_parity.py  test_helpers.py  test_integration_smoke.py  test_node_registration.py  test_points.py  test_sampler.py  test_split.py  test_voxel.py  test_workflows.py
web/: mesh_picker_widget.js  nodes_loadmesh_widget.js  picker.html
workflows/: segvigen_2d_guided.json  segvigen_asset_native.json  segvigen_full_auto.json  segvigen_image_conditioned.json  segvigen_interactive.json  segvigen_unconditioned.json
