[project]
name = "ComfyUI-SegviGen"
description = "ComfyUI nodes for SegviGen 3D mesh part segmentation — interactive + full modes via TRELLIS2 bridge"
version = "3.0.0"
license = "MIT"
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Repository = "https://github.com/dreamrec/ComfyUI-SegviGen"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.comfy]
PublisherId = "local"
DisplayName = "ComfyUI-SegviGen"
Icon = ""
